Rewritten plugin and updated to version 2.0.0
git-svn-id: https://plugins.svn.wordpress.org/custom-post-type-rss-feed/trunk@817865 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,11 @@
 
+Version 2 ( December 7th 2013 )
+--------------------------------------------------------------
+
+- Rewritten plugin, using oo programming. 
+
+
+
 Version 0.1 ( September 17th 2011 )
 --------------------------------------------------------------
 
